@@ -7,6 +7,7 @@ SystemRescue ChangeLog
 * Support for adding Certification Authorities (CAs) via YAML config (Gerd v. Egidy)
 * Uncompress kernel modules so the squashfs compression provides a better ratio (#247)
 * Optimized the initramfs compression to reduce the size of the ISO (Gerd v. Egidy)
+* Added development build option: faster build times but lower compression (Gerd v. Egidy)
 
 -------------------------------------------------------------------------------
 9.00 (2022-01-16):
